--- a/styles.css
+++ b/styles.css
@@ -8,26 +8,53 @@ body {
     height: 100vh;
     display: flex;
     justify-content: center;
-    
-    background-image: url(images/2381080.webp);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
 }
 
 .content {
     width: 70%;
+    height: 100vh;   
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
 
-    background-color: rgba(0, 0, 0, 0.781);
+    background-color: rgb(22, 22, 22);
     color: whitesmoke;
 }
 
-.page-title {
-    margin-top: 4vh;
+.screen {
+    margin-top: 5vh;
+    width: 90%;
+    height: 75%;
+    background-color: aliceblue;
+
+    display: flex;
+    justify-content: center;
+}
+
+.game-objects {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.player, .enemy {
+    width: 5em;
+    height: 5em;
+    border-radius: 100%;
+
+    margin: 2em;
+}
+
+.player {
+    background-color: green;
+}
+
+.enemy {
+    background-color: red;
+    align-self: flex-end;
 }
 
 .buttons {
@@ -35,12 +62,12 @@ body {
     display: flex;
     justify-content: space-evenly;
 
-    margin: 20vh 0;
+    margin-bottom: 5vh;
 }
 
 button {
     width: 15em;
-    height: 14em;
+    height: 4em;
     border-radius: 25px;  
 }
 
