--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
     flex-direction: column;
 
     background-color: rgb(22, 22, 22);
-    color: whitesmoke;
+    color: black;
 }
 
 .screen {
@@ -29,7 +29,7 @@ body {
     background-color: aliceblue;
 
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .game-objects {
@@ -55,6 +55,10 @@ body {
 .enemy {
     background-color: red;
     align-self: flex-end;
+}
+
+.player-health {
+    align-self: center;
 }
 
 .buttons {
