--- a/styles.css
+++ b/styles.css
@@ -101,8 +101,11 @@ button#rock {
     background-color: green;
 }
 
-#rock.clicked{
-    box-shadow: 5px 5px 2.5px rgb(0, 58, 0) inset;
+.clicked{
+    box-shadow: 5px 5px 5px rgba(29, 29, 29, 0.404) inset
+    , -5px -5px 5px rgba(29, 29, 29, 0.404) inset
+    , 5px -5px 5px rgba(29, 29, 29, 0.404) inset
+    , -5px 5px 5px rgba(29, 29, 29, 0.404) inset;
 }
 
 button#paper {
