--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,14 @@
 }
 
 body {
+    width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
 }
 
 .content {
-    width: 70%;
+    width: 100%;
     height: 100vh;   
     display: flex;
     justify-content: space-between;
@@ -40,10 +41,15 @@ body {
     justify-content: space-around;
 }
 
-.player, .enemy {
+.player, .computer {
     width: 5em;
     height: 5em;
     border-radius: 100%;    
+}
+
+.player-score, .computer-score {
+    width: 100%;
+    text-align: center;
 }
 
 .player {
@@ -55,13 +61,21 @@ body {
     height: 7em;
 }
 
-.enemy {
+.player-score {
+
+}
+
+.computer {
     align-self: flex-end;
 }
 
-.enemy-image {
+.computer-image {
     width: 7em;
     height: 7em;
+}
+
+.computer-score {
+
 }
 
 button .image-rock,button .image-paper,button .image-scissors {
